--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           DB_CONNECTION: ${{ env.DB_CONNECTION }}
           DB_DATABASE: ${{ env.DB_DATABASE }}
-        run: ./vendor/bin/tests
+        run: ./vendor/bin/phpunit tests
