--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -37,10 +37,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIAUK63BDATECXNASVT
+AWS_SECRET_ACCESS_KEY=xnrs1tSw+gC1SzJfatozgi4tgrpb36MVUrwTotXS
+AWS_DEFAULT_REGION=sa-east-1
+AWS_BUCKET=finance-control-s3
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
