--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "league/flysystem-aws-s3-v3": "^3.10",
-        "php-open-source-saver/jwt-auth": "^2.0"
+        "php-open-source-saver/jwt-auth": "^2.0",
+        "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
