--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/ui": "^4.1",
         "league/flysystem-aws-s3-v3": "^3.10",
         "php-open-source-saver/jwt-auth": "^2.0",
-        "symfony/dom-crawler": "^6.0"
+        "symfony/dom-crawler": "^6.0",
+        "tucker-eric/eloquentfilter": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
