feat: integrating with pusher

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_DATABASE=finance-control
 DB_USERNAME=finance_user
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=sync
@@ -43,13 +43,13 @@ AWS_DEFAULT_REGION=sa-east-1
 AWS_BUCKET=finance-control-s3
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1523058
+PUSHER_APP_KEY=e1c98407d6216af5dd74
+PUSHER_APP_SECRET=10853734e6539ea22989
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=sa1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
