--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.1",
         "league/flysystem-aws-s3-v3": "^3.10",
         "php-open-source-saver/jwt-auth": "^2.0",
+        "pusher/pusher-php-server": "^7.2",
         "symfony/dom-crawler": "^6.0",
         "tucker-eric/eloquentfilter": "^3.1"
     },
