feat: integrating with rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_PASSWORD=secret
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=s3
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -50,6 +50,14 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=sa1
+
+RABBITMQ_HOST=jackal.rmq.cloudamqp.com
+RABBITMQ_PORT=5672
+RABBITMQ_USER=mmsgmzdj
+RABBITMQ_PASSWORD=y5V0YI_LH_sNooE1XjHuW1OunZlBGPFI
+RABBITMQ_VHOST=mmsgmzdj
+RABBITMQ_QUEUE=finance-control
+RABBITMQ_DSN=amqp://
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
