--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -11,3 +11,15 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:rabbitmq]
+process_name=%(program_name)s
+command=php artisan rabbitmq:consume --sleep=1 --tries=3 --delay=5
+user=root
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stopwaitsecs=3600
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
