--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php-open-source-saver/jwt-auth": "^2.0",
         "pusher/pusher-php-server": "^7.2",
         "symfony/dom-crawler": "^6.0",
-        "tucker-eric/eloquentfilter": "^3.1"
+        "tucker-eric/eloquentfilter": "^3.1",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
