feat: adding php security checker to CI - adding cron to docker container - integrating with codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,19 @@ env:
   DB_CONNECTION: sqlite
 
 jobs:
+  security-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download the security checker binary
+        run: |
+          curl -L -s https://github.com/fabpot/local-php-security-checker/releases/download/v2.0.6/local-php-security-checker_2.0.6_linux_amd64 -o local-php-security-checker
+          chmod +x local-php-security-checker
+
+      - name: Run the binary
+        run: ./local-php-security-checker
+
   tests:
     name: Run tests and verfication
     runs-on: ubuntu-latest
@@ -44,8 +57,20 @@ jobs:
           mkdir -p database
           touch ${{ env.DB_DATABASE }}
 
+      - name: Run pint check
+        run: composer pint
+
       - name: Execute tests before allow merges
         env:
           DB_CONNECTION: ${{ env.DB_CONNECTION }}
           DB_DATABASE: ${{ env.DB_DATABASE }}
-        run: ./vendor/bin/phpunit tests
+        run: composer test
+
+      - name: Upload coverage to Codecov
+        if: github.event.pull_request.draft == false
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
+          files: ./coverage.xml
