--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "pint": "vendor/bin/pint --test",
+        "test": "vendor/bin/phpunit tests"
     },
     "extra": {
         "laravel": {
