--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -23,3 +23,8 @@ stdout_logfile=/dev/stdout
 stopwaitsecs=3600
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
+
+[program:cron]
+command = cron -f
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
