--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -25,6 +25,9 @@ stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
 [program:cron]
-command = cron -f
+command=/usr/sbin/crond -f -l 8
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+autorestart=true
