--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Finance Control"
 APP_ENV=local
 APP_KEY=base64:N5SQnNdeqb1tEgqyhJyqaqp638falKMeyTlgZPwwZTs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=e36ce5c015a608
+MAIL_PASSWORD=12a8d1bfc5891b
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="no-reply@financecontrol.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=AKIAUK63BDATECXNASVT
