feat: creating activity on password reset - event with tests (#5)
* feat: creating activity on password reset - event with tests

* fix: trying to give action permissions to check workflow trigger - forcing pint run

* fix: fixing permissions tag position

Co-authored-by: felipebrsk <felipebrsk@users.noreply.github.com>
Co-authored-by: felipebrsk <felipeoliveira@triventoeducacao.com.br>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,8 @@ jobs:
 
   phplint:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
@@ -93,6 +95,8 @@ jobs:
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           commit_message: ${{ steps.last-commit-message.outputs.msg }}
           commit_options: '--amend --no-edit'
